--- a/index.html
+++ b/index.html
@@ -9,17 +9,22 @@
 </head>
 
 <body>
-    <nav class="navbar background">
-        <ul class="nav-list">
+    <nav class="navbar background h-nav-resp">
+        <ul class="nav-list v-class-resp">
             <div class="logo"><img src="img/logo.jpg" alt="logo"></div>
-            <li> <a href="#home"> Home </a></li>
+            <li> <a href="#"> Home </a></li>
             <li> <a href="#about"> About</a></li>
-            <li> <a href="#charcter"> Character </a></li>
+            <li> <a href="#swachh"> Swachh Bharat Abhiyaan  </a></li>
             <li> <a href="#contactus">Contact Us</a></li>
         </ul>
-        <div class="rightNav">
+        <div class="rightNav v-class-resp">
             <input type="text" name="search" id="search">
             <button class="btn btn-sm">Search</button>
+        </div>
+        <div class="burger">
+            <div class="line"></div>
+            <div class="line"></div>
+            <div class="line"></div>
         </div>
     </nav>
 
@@ -27,11 +32,14 @@
         <div class="box-main">
             <div class="firstHalf">
                 <p class="text-big"> Taarak Mehta Ka Ooltah Chashmah </p>
-                <p class="text-small"> Taarak Mehta Ka Ooltah Chashmah is a Hindi sitcom based on the weekly column "Duniya Ne Undha Chasma" by Taarak Mehta in Chitralekha magazine. It is produced by Asit Kumarr Modi. It premiered on 28 July 2008 and airs on Sony SAB.[2] The show holds the Guinness World Record for the longest-running sitcom on television by episode count.[3] </p>
+                <p class="text-small"> Taarak Mehta Ka Ooltah Chashmah is a Hindi sitcom based on the weekly column
+                    "Duniya Ne Undha Chasma" by Taarak Mehta in Chitralekha magazine. It is produced by Asit Kumarr
+                    Modi. It premiered on 28 July 2008 and airs on Sony SAB.[2] The show holds the Guinness World Record
+                    for the longest-running sitcom on television by episode count.[3] </p>
                 <div class="buttons">
                     <button class="btn">Subscribe</button>
                     <button class="btn">Watch Video</button>
-                </div>     
+                </div>
             </div>
             <div class="secondHalf">
                 <img src="img/img.jpg" alt="Image">
@@ -41,52 +49,75 @@
     </section>
 
 
+    <section class="section"  id="about">
+        <div class="paras">
+            <p class="sectionTag text-big"> About Taarak Mehta Ka Ooltah Chashmah </p>
+            <p class="sectionSubTag text-small"> Created by Asit Kumarr Modi and produced by Neela Film Productions
+                Private Limited, Taarak Mehta Ka Ooltah Chashmah (TMKOC) is an Indian television show that was first
+                aired on July 28, 2008.
+
+                The show, which is a brand in itself, and is telecast on SAB TV, Sony Pictures Network India, tries to
+                positively transform audience perception of societal issues through entertainment. The various episodes
+                of the show reflect its creator Asit Kumarr Modi’s firm belief that laughter is the best way to bring
+                about social change, and thereby serve the nation. One of the most popular shows ever to be aired on
+                Indian television, it has become a habit of the audience, and its characters a household name – watched
+                daily by one crore people across the country. </p>
+        </div>
+        <div class="thumbnail">
+            <img src="img/1.jpg" alt="" class="imgFluid">
+        </div>
+    </section>
+
+
+    <section class="section section-left" id="swachh">
+        <div class="paras">
+            <p class="sectionTag text-big"> Swachh Bharat Abhiyaan </p>
+            <p class="sectionSubTag text-small"> Taarak Mehta Ka Oooltah Chashmah (TMKOC) is the only Hindi TV show
+                being nominated as one of the first nine ambassadors of Swachh Bharat Abhiyan on by Honourable Prime
+                Minister Narendra Modi on 2nd October 2014. The show has devoted itself entirely to promote – both by
+                precept and example – the vision of a clean and healthy India. The show has not only had a special story
+                track..... </p>
+        </div>
+        <div class="thumbnail">
+            <img src="img/2.jpg" alt="" class="imgFluid">
+        </div>
+    </section>
+
     <section class="section">
         <div class="paras">
-        <p class="sectionTag text-big"> About Taarak Mehta Ka Ooltah Chashmah </p>
-        <p class="sectionSubTag text-small"> Created by Asit Kumarr Modi and produced by Neela Film Productions Private Limited, Taarak Mehta Ka Ooltah Chashmah (TMKOC) is an Indian television show that was first aired on July 28, 2008.
+            <p class="sectionTag text-big"> Tmkoc Completed Over 3000 Episodes </p>
+            <p class="sectionSubTag text-small"> TMKOC is today recognised as a platform for a progressive India and is
+                the world’s longest running daily family comedy show. Having successfully completed over 3000 episodes
+                and enjoying massive viewership worldwide.
 
-            The show, which is a brand in itself, and is telecast on SAB TV, Sony Pictures Network India, tries to positively transform audience perception of societal issues through entertainment. The various episodes of the show reflect its creator Asit Kumarr Modi’s firm belief that laughter is the best way to bring about social change, and thereby serve the nation. One of the most popular shows ever to be aired on Indian television, it has become a habit of the audience, and its characters a household name – watched daily by one crore people across the country. </p>
-    </div>
+                Taarak Mehta Ka Ooltah Chashmah has also launched in Marathi Language titled ‘Gokuldham Chi Duniyadaari’
+                on Fakt Marathi and Telugu language titled ‘Taarak Maama Aiyyo Rama’ on ETV Plus.
+
+            </p>
+        </div>
         <div class="thumbnail">
-        <img src="img/1.jpg" alt="" class="imgFluid">
-    </div>
+            <img src="img/3.jpg" alt="" class="imgFluid">
+        </div>
     </section>
 
+    <section class="contact" id="contactus">
+        <h1 class="text-center">Contact Us</h1>
+        <div class="form">
+            <input class="form-input" type="text" name="name" id="name" placeholder="Enter Your name">
+            <input class="form-input" type="text" name="phone" id="phone" placeholder="Enter Your phone">
+            <input class="form-input" type="email" name="email" id="name" placeholder="Enter Your email">
+                <textarea class="form-input" name="text" id="text" cols="30" rows="10" placeholder="Ellaborate your concern"></textarea>
+            <button class="btn btn-sm btn-dark"> Submit </button>
 
-    <section class="section section-left">
-        <div class="paras">
-        <p class="sectionTag text-big"> Swachh Bharat Abhiyaan </p>
-        <p class="sectionSubTag text-small"> Taarak Mehta Ka Oooltah Chashmah (TMKOC) is the only Hindi TV show being nominated as one of the first nine ambassadors of Swachh Bharat Abhiyan on by Honourable Prime Minister Narendra Modi on 2nd October 2014. The show has devoted itself entirely to promote – both by precept and example – the vision of a clean and healthy India. The show has not only had a special story track..... </p>
-    </div>
-        <div class="thumbnail">
-        <img src="img/2.jpg" alt="" class="imgFluid">
-    </div>
+        </div>
     </section>
 
-    <section class="section">
-        <div class="paras">
-        <p class="sectionTag text-big"> Tmkoc Completed Over 3000 Episodes </p>
-        <p class="sectionSubTag text-small"> TMKOC is today recognised as a platform for a progressive India and is the world’s longest running daily family comedy show. Having successfully completed over 3000 episodes and enjoying massive viewership worldwide.
-
-            Taarak Mehta Ka Ooltah Chashmah has also launched in Marathi Language titled ‘Gokuldham Chi Duniyadaari’ on Fakt Marathi and Telugu language titled ‘Taarak Maama Aiyyo Rama’ on ETV Plus.
-            
-             </p>
-    </div>
-        <div class="thumbnail">
-        <img src="img/3.jpg" alt="" class="imgFluid">
-    </div>
-    </section>
-
-<section class="contact">
-  <h1 class="text-center">Contact Us</h1>
-  <div class="form">
-      <input type="text" name="name" id="name" placeholder="Enter Your name" >
-      <input type="text" name="phone" id="phone" placeholder="Enter Your phone">
-      <input type="email" name="email" id="name" placeholder="Enter Your email">
-    
-  </div>
-</section>
+<footer class="background">
+    <p class="text-footer">
+        Copyright &copy; 2021 All Rights Reserved by TMKOC
+    </p>
+</footer>
+<script src="js/resp.js"></script>
 </body>
 
 </html>
